[workspace]
resolver = "2"
members = ["drone"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]


[profile.dev.drone]
debug = true
opt-level = "z"
incremental = true

[profile.release.drone]
debug = false
opt-level = "z"
incremental = true

[profile.dev]
lto = true

[profile.release]
lto = true
